tests/samples/block-switch-bad-breakpoint/template.blate
// error: unknown breakpoint in switch
{@switch x}{:foo}bar{/switch}
